# python-bru

./: .gitignore  main.py  pyproject.toml
app/: common.py
app/bruno/: endpoint_parts.py  parts.py
app/openapi/: coupler.py  parser.py  parts.py
