[tool.poetry]
name = "python-bru"
version = "0.1.0"
description = ""
authors = ["Sergey Petrin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^23.2.1"
pydantic = "^2.6.4"
loguru = "^0.7.2"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
